--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,106 +1,81 @@
 <?php echo $this->doctype(); ?>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <?php echo $this->headTitle('ZF2 '. $this->translate('Skeleton Application'))->setSeparator(' - ')->setAutoEscape(false) ?>
+<head>
+    <meta charset="utf-8">
+    <?php echo $this->headTitle($this->translate('Krenke Brinquedos'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
-        <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0') ?>
+    <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0') ?>
 
-        <!-- Le styles -->
-        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/images/favicon.ico'))
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap-responsive.min.css')
-                        ->prependStylesheet($this->basePath() . '/css/style.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
+    <!-- Le styles -->
+    <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/images/favicon.ico'))
+    ->prependStylesheet($this->basePath() . '/css/bootstrap-responsive.min.css')
+    ->prependStylesheet($this->basePath() . '/css/style.css')
+    ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
 
-        <!-- Scripts -->
-        <?php echo $this->headScript()->prependFile($this->basePath() . '/js/html5.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-                                      ->prependFile($this->basePath() . '/js/bootstrap.min.js')
-                                      ->prependFile($this->basePath() . '/js/jquery.min.js') ?>
-        <style type="text/css">
-      body {
+    <!-- Scripts -->
+    <?php echo $this->headScript()->prependFile($this->basePath() . '/js/html5.js', 'text/javascript', array('conditional' => 'lt IE 9',))
+    ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+    ->prependFile($this->basePath() . '/js/jquery.min.js') ?>
+    <style type="text/css">
+    body {
         padding-top: 20px;
         padding-bottom: 40px;
-      }
+    }
 
-      /* Custom container */
-      .container-narrow {
+    /* Custom container */
+    .container-narrow {
         margin: 0 auto;
         max-width: 700px;
-      }
-      .container-narrow > hr {
+    }
+    .container-narrow > hr {
         margin: 30px 0;
-      }
+    }
 
-      /* Main marketing message and sign up button */
-      .jumbotron {
+    /* Main marketing message and sign up button */
+    .jumbotron {
         margin: 60px 0;
         text-align: center;
-      }
-      .jumbotron h1 {
+    }
+    .jumbotron h1 {
         font-size: 72px;
         line-height: 1;
-      }
-      .jumbotron .btn {
+    }
+    .jumbotron .btn {
         font-size: 21px;
         padding: 14px 24px;
-      }
+    }
 
-      /* Supporting marketing content */
-      .marketing {
+    /* Supporting marketing content */
+    .marketing {
         margin: 60px 0;
-      }
-      .marketing p + h4 {
+    }
+    .marketing p + h4 {
         margin-top: 28px;
-      }
+    }
     </style>
-    </head>
-    <body>
-        <div class="container-narrow">
+</head>
+<body>
+    <div class="container-narrow">
+        <div class="masthead">
+            <ul class="nav nav-pills pull-right">
+                <li class="active"><a href="/application/index"><?=$this->translate('Início')?></a></li>
+                <li><a href="/application/index/about"><?=$this->translate('Sobre')?></a></li>
+                <li><a href="/application/index/contact"><?=$this->translate('Contato')?></a></li>
+            </ul>
+            <h3 class="muted"><?= $this->translate('Krenke Playgrounds')?></h3>
+        </div>
 
-            <div class="masthead">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#"><?=$this->translate('Início')?></a></li>
-                    <li><a href="#"><?=$this->translate('Sobre')?></a></li>
-                    <li><a href="#"><?=$this->translate('Contato')?></a></li>
-                </ul>
-                <h3 class="muted"><?= $this->translate('Krenke Playgrounds')?></h3>
-            </div>
+        <hr>
 
-            <hr>
+        <?php echo $this->content; ?>
 
-            <div class="jumbotron">
-                <h1>Em breve um novo site para você!</h1>
-                <p class="lead"><?=$this->translate('Fotos, notícias, playgrounds e as normas da ABNT, tudo isso e muito mais para você nosso cliente!')?></p>
-                <a class="btn btn-large btn-success" href="#"><?=$this->translate('Receba nossas news')?></a>
-            </div>
+        <hr>
 
-            <hr>
+        <div class="footer">
+            <p>&copy; Krenke Brinquedos Pedagógicos  2013</p>
+        </div>
 
-            <div class="row-fluid marketing">
-                <div class="span6">
-                    <h4><?=$this->translate('Fotos')?></h4>
-                    <p><?=$this->translate('A partir de agora nosso site contará com uma sessão de fotos atualizadas!')?></p>
-
-                    <h4><?=$this->translate('Segurança')?></h4>
-                    <p><?=$this->translate('O Brasil e a ABNT estão implantando normas de segurança para que seu filho brinque com maior segurança. A Krenke tem o prazer de trazer este conhecimento a nossos clientes.')?></p>
-                </div>
-
-                <div class="span6">
-                    <h4>Subheading</h4>
-                    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                    <h4>Subheading</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="footer">
-                <p>&copy; Krenke Brinquedos Pedagógicos 2013</p>
-            </div>
-
-        </div> <!-- /container -->
-    </body>
+    </div> <!-- /container -->
+</body>
 </html>
